docs: 组件init钩子前后梳理

--- a/Vue源码/1.2-Vue的定义.md
+++ b/Vue源码/1.2-Vue的定义.md
@@ -39,7 +39,7 @@ function initMixin (Vue) {
 
     // 对用于初始化实例的options做了一层处理
     if (options && options._isComponent) {
-      // _isComponent表示创建的是组件实例，在3.2小节会再次讲到这一点
+      // _isComponent表示创建的是子组件实例，在3.2小节会再次讲到这一点
       // 因为动态选项合并非常慢，而且没有一个内部组件选项，需要特殊处理?
       initInternalComponent(vm, options)
     } else {
