--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -53,7 +53,7 @@ function init (vnode, hydrating) {
 }
 ```
 
-`init`钩子的内部逻辑很简单（暂不考虑`keepAlive`组件的情况），对于普通组件vnode，会先通过`createComponentInstanceForVnode`创建一个**对应的Vue实例**：
+`init`钩子的内部逻辑很简单（暂不考虑`keepAlive`组件的情况），对于普通组件vnode，会先通过`createComponentInstanceForVnode`创建一个新的**子组件实例**（记为`ch`）：
 ```js
 function createComponentInstanceForVnode (vnode, parent) {
   var options = {
@@ -70,7 +70,7 @@ function createComponentInstanceForVnode (vnode, parent) {
 }
 ```
 
-在这里`vnode.componentOptions.Ctor`对应的是组件的构造函数，它是在创建组件vnode时写入`vnode.componentOptions`的。另外需要注意实例化组件实例的参数`options`：
+在这里`vnode.componentOptions.Ctor`对应的是子组件实例`ch`的构造函数，它是在创建组件vnode时写入`vnode.componentOptions`的。另外需要注意实例化子组件实例`ch`的参数`options`：
 ```js
 {
   _isComponent: true,
@@ -79,8 +79,30 @@ function createComponentInstanceForVnode (vnode, parent) {
 }
 ```
 
-`_isComponent`表示创建的Vue实例是一个组件实例，`parent`表示**当前激活的组件实例**。
+`_isComponent`表示创建的Vue实例是一个**子组件**实例，`parent`表示**当前激活的组件实例**。
 
-在通过组件vnode创建对应的组件实例之后，将它赋给`vnode.componentInstance`来保留对组件实例的引用。然后通过调用组件实例的`$mount`方法挂载子组件，关于`$mount`的逻辑就再次回到之前的流程中去。
+在通过组件vnode创建对应的根节点实例之后，将它赋给`vnode.componentInstance`来保留对子组件实例的引用。然后通过子组件实例`ch`的`$mount`方法挂载子组件，关于`ch.$mount`的逻辑就再次回到之前的流程中去。也就是说组件的`update`操作本质是通过创建子组件实例，借助子组件实例的`$mount`挂载实现。
+
+在继续分析`createComponent`的`init`钩子后的流程之前，我们先回顾一下Vue实例的`_init`方法：
+```js
+Vue.prototype._init = function (options) {
+  const vm = this
+  vm._uid = uid++
+  vm._isVue = true
+
+  if (options && options._isComponent) {
+    initInternalComponent(vm, options)
+  } else {
+    // 普通实例，合并options给vm.$options
+    vm.$options = mergeOptions(
+      resolveConstructorOptions(vm.constructor),
+      options || {},
+      vm
+    )
+  }
+
+  // ...生命周期、事件、状态初始化操作...
+}
+```
 
 ###
