--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -24,12 +24,8 @@ function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
       i(vnode, false)
     }
     if (isDef(vnode.componentInstance)) {
-      const isReactivated = i.keepAlive
       initComponent(vnode, insertedVnodeQueue)
       insert(parentElm, vnode.elm, refElm)
-      if (isTrue(isReactivated)) {
-        reactivateComponent(vnode, insertedVnodeQueue, parentElm, refElm)
-      }
       return true
     }
   }
@@ -81,9 +77,9 @@ function createComponentInstanceForVnode (vnode, parent) {
 
 `_isComponent`表示创建的Vue实例是一个**子组件**实例，`parent`表示**当前激活的组件实例**。
 
-在通过组件vnode创建对应的根节点实例之后，将它赋给`vnode.componentInstance`来保留对子组件实例的引用。然后通过子组件实例`ch`的`$mount`方法挂载子组件，关于`ch.$mount`的逻辑就再次回到之前的流程中去。也就是说组件的`update`操作本质是通过创建子组件实例，借助子组件实例的`$mount`挂载实现。
+在通过组件vnode创建对应的根节点实例之后，将它赋给`vnode.componentInstance`来保留对子组件实例的引用，这里可以看出组件的`update`操作本质是通过创建子组件实例，借助子组件实例的`$mount`挂载实现。
 
-在继续分析`createComponent`的`init`钩子后的流程之前，我们先回顾一下Vue实例的`_init`方法：
+在继续分析`createComponent`执行完`init`钩子之后的流程之前，我们先回顾一下Vue实例的`_init`方法：
 ```js
 Vue.prototype._init = function (options) {
   const vm = this
@@ -105,4 +101,82 @@ Vue.prototype._init = function (options) {
 }
 ```
 
-###
+创建子组件实例时，子组件的`_inti`方法会得到调用，由于`options._isComponent`为`true`走到了`initInternalComponent`的流程中去：
+```js
+function initInternalComponent (vm, options) {
+  const opts = vm.$options = Object.create(vm.constructor.options)
+  const parentVnode = options._parentVnode
+  opts.parent = options.parent
+  opts._parentVnode = parentVnode
+
+  const vnodeComponentOptions = parentVnode.componentOptions
+  opts.propsData = vnodeComponentOptions.propsData
+  opts._parentListeners = vnodeComponentOptions.listeners
+  opts._renderChildren = vnodeComponentOptions.children
+  opts._componentTag = vnodeComponentOptions.tag
+
+  if (options.render) {
+    opts.render = options.render
+    opts.staticRenderFns = options.staticRenderFns
+  }
+}
+```
+这里通过：
+- opts.parent = options._parent
+- opts._parentVnode = options._parentVnode
+
+将`createComponentInstanceForVnode`接收的几个参数合并到子组件实例的`$options`中去。
+
+
+再次回到组件的`init`钩子中，创建子组件实例`ch`后通过`ch.$mount`挂载子组件实例。子组件的`_render`：
+```js
+Vue.prototype._render = function () {
+  const vm = this
+  const { render, _parentVnode } = vm.$options
+
+  vm.$vnode = _parentVnode
+  let vnode = render.call(vm._renderProxy, vm.$createElement)
+
+  if (Array.isArray(vnode) && vnode.length === 1) vnode = vnode[0]
+
+  vnode.parent = _parentVnode
+  return vnode
+}
+```
+
+子组件的`_update`：
+```js
+Vue.prototype._update = function (vnode, hydrating) {
+  const vm = this
+  const prevEl = vm.$el
+  // 前一次updata对应的vnode
+  const prevVnode = vm._vnode
+  const restoreActiveInstance = setActiveInstance(vm)
+  // 将update的vnode记录在vm._vnode上，供下一次_update取出使用
+  vm._vnode = vnode
+  if (!prevVnode) {
+    vm.$el = vm.__patch__(vm.$el, vnode, hydrating, false)
+  } else {
+    vm.$el = vm.__patch__(prevVnode, vnode)
+  }
+  restoreActiveInstance()
+  if (prevEl) prevEl.__vue__ = null
+  if (vm.$el) vm.$el.__vue__ = vm
+
+  if (vm.$vnode && vm.$parent && vm.$vnode === vm.$parent._vnode) {
+    vm.$parent.$el = vm.$el
+  }
+}
+```
+
+### 子组件的initComponent和insert
+```js
+if (isDef(vnode.componentInstance)) {
+  initComponent(vnode, insertedVnodeQueue)
+  insert(parentElm, vnode.elm, refElm)
+  if (isTrue(isReactivated)) {
+    reactivateComponent(vnode, insertedVnodeQueue, parentElm, refElm)
+  }
+  return true
+}
+```
