docs: vm.$vnode和vm._vnode

--- a/Vue源码/2.2-数据驱动-vnode和render方法.md
+++ b/Vue源码/2.2-数据驱动-vnode和render方法.md
@@ -40,13 +40,13 @@ Vue.prototype._render = function () {
   const vm = this
   const { render, _parentVnode } = vm.$options
 
-  // 用$vnode保存父虚拟node
+  // 用实例的$vnode记录父vnode
   vm.$vnode = _parentVnode
   let vnode = render.call(vm._renderProxy, vm.$createElement)
 
   if (Array.isArray(vnode) && vnode.length === 1) vnode = vnode[0]
 
-  // set parent
+  // 用vnode.parent记录父vnode
   vnode.parent = _parentVnode
   return vnode
 }
