--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -144,21 +144,34 @@ Vue.prototype._render = function () {
 }
 ```
 
-子组件的`_update`：
+在生成子组件vnode时，子组件实例的`$vnode`保留了对父vnode的引用，生成的子组件实例对应的vnode的`parent`同样指向了父vnode，而在`_update`时：
 ```js
+let activeInstance = null
+
+function setActiveInstance(vm) {
+  // 记录之前的激活的Vue实例
+  const prevActiveInstance = activeInstance
+  activeInstance = vm
+  // 返回的方法用于重置激活的Vue实例
+  return () => {
+    activeInstance = prevActiveInstance
+  }
+}
+
 Vue.prototype._update = function (vnode, hydrating) {
   const vm = this
   const prevEl = vm.$el
-  // 前一次updata对应的vnode
   const prevVnode = vm._vnode
+  // 将activeInstance指向当前执行_update操作的Vue实例
   const restoreActiveInstance = setActiveInstance(vm)
-  // 将update的vnode记录在vm._vnode上，供下一次_update取出使用
+  // 将实例对应的vnode记录在vm._vnode上
   vm._vnode = vnode
   if (!prevVnode) {
     vm.$el = vm.__patch__(vm.$el, vnode, hydrating, false)
   } else {
     vm.$el = vm.__patch__(prevVnode, vnode)
   }
+  // 重置activeInstance
   restoreActiveInstance()
   if (prevEl) prevEl.__vue__ = null
   if (vm.$el) vm.$el.__vue__ = vm
@@ -168,6 +181,10 @@ Vue.prototype._update = function (vnode, hydrating) {
   }
 }
 ```
+
+子组件实例的`_vnode`指向了对应的vnode，所以有`ch._vnode.parent === ch.$vnode`，子组件实例的`$vnode`和`_vnode`可以相当于是父子关系。
+
+
 
 ### 子组件的initComponent和insert
 ```js
