docs: 组件实例$parent

--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -97,7 +97,8 @@ Vue.prototype._init = function (options) {
     )
   }
 
-  // ...生命周期、事件、状态初始化操作...
+  initLifecycle(vm)
+  // 事件、状态初始化操作...
 }
 ```
 
@@ -134,6 +135,7 @@ Vue.prototype._render = function () {
   const vm = this
   const { render, _parentVnode } = vm.$options
 
+  // _parentVnode为父vnode
   vm.$vnode = _parentVnode
   let vnode = render.call(vm._renderProxy, vm.$createElement)
 
@@ -167,12 +169,15 @@ Vue.prototype._update = function (vnode, hydrating) {
   // 将实例对应的vnode记录在vm._vnode上
   vm._vnode = vnode
   if (!prevVnode) {
+    // 新建
     vm.$el = vm.__patch__(vm.$el, vnode, hydrating, false)
   } else {
+    // 更新
     vm.$el = vm.__patch__(prevVnode, vnode)
   }
   // 重置activeInstance
   restoreActiveInstance()
+
   if (prevEl) prevEl.__vue__ = null
   if (vm.$el) vm.$el.__vue__ = vm
 
@@ -182,11 +187,103 @@ Vue.prototype._update = function (vnode, hydrating) {
 }
 ```
 
-子组件实例的`_vnode`指向了对应的vnode，所以有`ch._vnode.parent === ch.$vnode`，子组件实例的`$vnode`和`_vnode`可以相当于是父子关系。
+`vnode`是由子组件实例`ch._render`生成的，`vm._vnode = vnode`使得子组件实例的`_vnode`属性指向了`vnode`，所以有`ch._vnode.parent === ch.$vnode`，子组件实例的`$vnode`和`_vnode`相当于是父子关系。
 
+`activeInstance`是一个全局变量，用于保持对当前Vue实例的引用——Vue的实例化是一个深度优先的遍历过程，在实例化子组件时需要知道当前上下文Vue实例是什么。在上面子组件的实例化过程已经提到过，`ch._init`方法会先走到`initInternalComponent`流程中去——将父vnode和父组件实例合并到子组件实例的`$options`中。紧接着的`initLifecycle(vm)`：
+```js
+function initLifecycle (vm) {
+  const options = vm.$options
 
+  let parent = options.parent
+  if (parent && !options.abstract) {
+    while (parent.$options.abstract && parent.$parent) {
+      parent = parent.$parent
+    }
+    parent.$children.push(vm)
+  }
+
+  vm.$parent = parent
+  vm.$root = parent ? parent.$root : vm
+
+  // ...
+}
+```
+
+可以看到，实例的`$parent`指向了父实例，`parent.$children.push(vm)`将当前实例推入父实例的`$children`数组中。
+
+在实例的`_update`过程中，`activeInstance`指向了当前实例，在当前实例的`__patch__`完成后，`activeInstance`重新指向它的父实例，这样保证了`createComponentInstanceForVnode`的遍历是深度优先的。
+
+回到`_update`中，当前实例的`__patch__`：
+```js
+if (!prevVnode) {
+  // 新建
+  vm.$el = vm.__patch__(vm.$el, vnode, hydrating, false)
+} else {
+  // 更新
+  vm.$el = vm.__patch__(prevVnode, vnode)
+}
+
+function patch (oldVnode, vnode, hydrating, removeOnly) {
+  let isInitialPatch = false
+  const insertedVnodeQueue = []
+
+  if (isUndef(oldVnode)) {
+    isInitialPatch = true
+    createElm(vnode, insertedVnodeQueue)
+  } else {
+    // ...
+  }
+}
+```
+
+这里又回到了本节开始的地方`createElm`：
+```js
+function createElm (
+  vnode,
+  insertedVnodeQueue,
+  parentElm,
+  refElm,
+  nested,
+  ownerArray,
+  index
+) {
+  if (createComponent(vnode, insertedVnodeQueue, parentElm, refElm)) {
+    return
+  }
+
+  const data = vnode.data
+  const children = vnode.children
+  const tag = vnode.tag
+  if (isDef(tag)) {
+    vnode.elm = vnode.ns
+      ? nodeOps.createElementNS(vnode.ns, tag)
+      : nodeOps.createElement(tag, vnode)
+    setScope(vnode)
+
+    if (__WEEX__) {
+      // ...
+    } else {
+      createChildren(vnode, children, insertedVnodeQueue)
+      if (isDef(data)) {
+        invokeCreateHooks(vnode, insertedVnodeQueue)
+      }
+      insert(parentElm, vnode.elm, refElm)
+    }
+    // ...
+  } else if (isTrue(vnode.isComment)) {
+    vnode.elm = nodeOps.createComment(vnode.text)
+    insert(parentElm, vnode.elm, refElm)
+  } else {
+    vnode.elm = nodeOps.createTextNode(vnode.text)
+    insert(parentElm, vnode.elm, refElm)
+  }
+}
+```
+
+注意，这里我们传入的vnode是组件渲染的vnode，也就是之前说的`vm._vnode`，如果组件的根节点是个普通元素，那么`vm._vnode`也是普通的 vnode，这里`createComponent(vnode, insertedVnodeQueue, parentElm, refElm)`的返回值是`false`。接下来的过程就和我们上一章一样了，先创建一个父节点占位符，然后再遍历所有子vnode递归调用`createElm`，在遍历的过程中，如果遇到子vnode是一个组件的vnode，则重复本节开始的过程，这样通过一个递归的方式就可以完整地构建了整个组件树。
 
 ### 子组件的initComponent和insert
+回到`createComponent`中，在组件的`init`钩子执行完后，会有一个子组件实例生成并被挂到`vnode.componentInstance`上，因此：
 ```js
 if (isDef(vnode.componentInstance)) {
   initComponent(vnode, insertedVnodeQueue)
@@ -197,3 +294,5 @@ if (isDef(vnode.componentInstance)) {
   return true
 }
 ```
+
+`initComponent(vnode, insertedVnodeQueue)`
