--- a/Vue源码/2.3-数据驱动-update方法.md
+++ b/Vue源码/2.3-数据驱动-update方法.md
@@ -157,7 +157,7 @@ createElm(vnode, insertedVnodeQueue, oldElm._leaveCb ? null : parentElm, nodeOps
 function createElm (vnode, insertedVnodeQueue, parentElm, refElm, nested, ownerArray, index) {
   vnode.isRootInsert = !nested
 
-  // createComponent方法用于创建子组件，如果可以创建子组件则创建之并返回true——跳过后续的创建DOM流程
+  // createComponent方法用于尝试以组件方式update，如果可以则返回true——跳过后续的普通vnode的update
   if (createComponent(vnode, insertedVnodeQueue, parentElm, refElm)) return
 
   const data = vnode.data
