--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -2,7 +2,15 @@
 
 回顾`2.3`小节，在分析`update`内部调用的`createElm`方法(`vm._update -> vm.__patch__ -> createPatchFunction -> patch -> createElm`)的内部逻辑中：
 ```js
-function createElm () {
+function createElm (
+  vnode,
+  insertedVnodeQueue,
+  parentElm,
+  refElm,
+  nested,
+  ownerArray,
+  index
+) {
   // 尝试处理组件vnode
   if (createComponent(vnode, insertedVnodeQueue, parentElm, refElm)) return
 
@@ -13,7 +21,7 @@ function createElm () {
 }
 ```
 
-第一步就是尝试处理组件vnode对应的DOM，当时跳过了此处`createComponent`的分析：
+第一步就是尝试处理组件vnode对应的`patch`，普通vnode则会跳过此处`createComponent`的逻辑：
 ```js
 function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
   // 组件vnode.data不为空
@@ -33,7 +41,7 @@ function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
 ```
 
 ### init钩子
-回顾上一小节，组件类型的vnode在被创建时安装了`init`钩子，所以此时可以得到执行：
+回顾上一小节，组件类型的vnode在被创建时安装的`init`钩子，此时可以得到执行：
 ```js 
 function init (vnode, hydrating) {
   if (vnode.componentInstance && !vnode.componentInstance._isDestroyed && vnode.data.keepAlive) {
@@ -77,7 +85,7 @@ function createComponentInstanceForVnode (vnode, parent) {
 
 `_isComponent`表示创建的Vue实例是一个**子组件**实例，`parent`表示**当前激活的组件实例**。
 
-在通过组件vnode创建对应的根节点实例之后，将它赋给`vnode.componentInstance`来保留对子组件实例的引用，这里可以看出组件的`update`操作本质是通过创建子组件实例，借助子组件实例的`$mount`挂载实现。
+在通过组件vnode创建对应的根节点实例之后，将它赋给`vnode.componentInstance`来保留对子组件实例的引用。组件实例在`init`钩子执行完后`vnode.componentInstance`不为空，`createComponent`会返回`true`，阻断`createElm`中后续处理普通vnode的逻辑。因为组件的`update`操作本质是通过创建子组件实例，借助子组件实例的`$mount`实现组件实例本身的`update`。
 
 在继续分析`createComponent`执行完`init`钩子之后的流程之前，我们先回顾一下Vue实例的`_init`方法：
 ```js
@@ -247,43 +255,22 @@ function createElm (
   ownerArray,
   index
 ) {
+  // 组件vnode创建子组件实例，通过子组件实例$mount实现组件的update
   if (createComponent(vnode, insertedVnodeQueue, parentElm, refElm)) {
     return
   }
 
+  // 非组件vnode的处理流程
   const data = vnode.data
   const children = vnode.children
-  const tag = vnode.tag
-  if (isDef(tag)) {
-    vnode.elm = vnode.ns
-      ? nodeOps.createElementNS(vnode.ns, tag)
-      : nodeOps.createElement(tag, vnode)
-    setScope(vnode)
-
-    if (__WEEX__) {
-      // ...
-    } else {
-      createChildren(vnode, children, insertedVnodeQueue)
-      if (isDef(data)) {
-        invokeCreateHooks(vnode, insertedVnodeQueue)
-      }
-      insert(parentElm, vnode.elm, refElm)
-    }
-    // ...
-  } else if (isTrue(vnode.isComment)) {
-    vnode.elm = nodeOps.createComment(vnode.text)
-    insert(parentElm, vnode.elm, refElm)
-  } else {
-    vnode.elm = nodeOps.createTextNode(vnode.text)
-    insert(parentElm, vnode.elm, refElm)
-  }
+  // ...
 }
 ```
 
-注意，这里我们传入的vnode是组件渲染的vnode，也就是之前说的`vm._vnode`，如果组件的根节点是个普通元素，那么`vm._vnode`也是普通的 vnode，这里`createComponent(vnode, insertedVnodeQueue, parentElm, refElm)`的返回值是`false`。接下来的过程就和我们上一章一样了，先创建一个父节点占位符，然后再遍历所有子vnode递归调用`createElm`，在遍历的过程中，如果遇到子vnode是一个组件的vnode，则重复本节开始的过程，这样通过一个递归的方式就可以完整地构建了整个组件树。
+现在我们传入的vnode是子组件vnode，如果最初组件的根节点是个普通元素，那么此时的子组件vnode也是普通的vnode，`createComponent`的返回值是`false`，接下来的过程就和之前普通vnode的`update`一样了——先创建一个父节点占位符，然后再遍历所有子vnode递归调用`createElm`，在遍历的过程中，如果遇到子vnode是一个组件类型的vnode，则重复本节开始的过程，这样通过一个递归的方式就可以完整地构建了整个组件树。
 
 ### 子组件的initComponent和insert
-回到`createComponent`中，在组件的`init`钩子执行完后，会有一个子组件实例生成并被挂到`vnode.componentInstance`上，因此：
+回到组件的`createComponent`中，在组件的`init`钩子执行完后，会有一个子组件实例生成并被挂到`vnode.componentInstance`上，在子组件实例`vnode.componentInstance.$mount`执行之后：
 ```js
 if (isDef(vnode.componentInstance)) {
   initComponent(vnode, insertedVnodeQueue)
@@ -295,4 +282,7 @@ if (isDef(vnode.componentInstance)) {
 }
 ```
 
-`initComponent(vnode, insertedVnodeQueue)`
+通过`insert`完成组件的DOM的插入。
+
+### 总结
+至此，一个组件vnode是如何创建、初始化、渲染的过程也就分析完了。在对组件化的实现有一个大概掌握后，接下来我们要来探究一下这其中的一些细节。
