--- a/Vue源码/2.3-数据驱动-update方法.md
+++ b/Vue源码/2.3-数据驱动-update方法.md
@@ -191,7 +191,7 @@ function createElm (vnode, insertedVnodeQueue, parentElm, refElm, nested, ownerA
 ```
 
 `createElm`分别做了以下工作：
-- 调用`createComponent`尝试将以组件vnode更新DOM，这个方法将在组件化模块中分析
+- 调用`createComponent`尝试以组件vnode做`update`，这个方法将在组件化模块中分析
 - 根据`vnode.tag`创建对应的`DOM`元素（`nodeOps.createElement`）来初始化`vnode.elm`
 - 调用`createChildren`创建子`vnode`对应的DOM
 - `invokeCreateHooks`执行钩子
