--- a/Vue源码/3.3-组件化-合并options.md
+++ b/Vue源码/3.3-组件化-合并options.md
@@ -1,6 +1,6 @@
-通过之前的源码分析，现在我们知道，通过`new Vue`创建Vue实例的场景有两种：一种是手动调用去实例化一个全局的`vm`，另一种是组件内部实例化子组件实例。
+通过之前的源码分析，现在我们知道，创建的Vue实例有两种：一种是手动调用`Vue`构造函数创建的全局的`vm`，另一种是在做组件vnode的`patch`过程中创建的子组件实例。
 
-无论哪种场景，在实例化`vm`时都会都会走到`vm._init(options)`的逻辑中去，在`1.2-Vue的定义`中提到过这一点，`_init`中有一段合并`options`的逻辑：
+无论哪种场景，在创建Vue实例时都会走到`vm._init(options)`的逻辑中去，在`1.2-Vue的定义`中提到过这一点，`_init`中有一段合并`options`的逻辑：
 ```js
 Vue.prototype._init = function (options) {
   if (options && options._isComponent) {
@@ -23,9 +23,9 @@ Vue.prototype._init = function (options) {
 先说结论：`mergeOptions`将`resolveConstructorOptions(vm.constructor)`的返回值与`options`合并。
 
 ### 1. resolveConstructorOptions
-从名字上就可以看出`resolveConstructorOptions`的作用，解析返回构造函数的`options`属性：
+从名字上就可以看出`resolveConstructorOptions`的作用，解析并返回构造函数的`options`属性：
 ```js
-function (Ctor) {
+function resolveConstructorOptions (Ctor) {
   var options = Ctor.options
   if (Ctor.super) {
     var superOptions = resolveConstructorOptions(Ctor.super)
@@ -43,16 +43,16 @@ function (Ctor) {
 }
 ```
 
-对于手动创建的`vm`，`vm.constructor`当然是`Vue`，而因为`Vue.super`为空，所以`resolveConstructorOptions`直接返回`Vue.options`。而对于组件级的`vm`，其`options`的解析还需要额外的处理逻辑。
+对于构造函数Vue创建的`vm`，`vm.constructor`当然是`Vue`，而因为`Vue.super`为空，所以`resolveConstructorOptions`直接返回`Vue.options`。而对于组件级的`vm`，其`options`的解析还需要额外的处理逻辑。
 
-我们先来看`Vue.options`。
+我们先来看构造函数Vue的`options`属性。
 
 #### 1.1 Vue.options
 涉及`Vue.options`的写操作分散在两处：
 ```js
 // src/core/global-api/index.js
 function initGlobalAPI (Vue) {
-  // ...
+  // ...初始为空
   Vue.options = Object.create(null)
 
   // ASSET_TYPES = ['component', 'directive', 'filter']
@@ -77,7 +77,41 @@ extend(Vue.options.components, platformComponents)
 ![Vue.options](https://pic.downk.cc/item/5f588c47160a154a67f06d84.jpg)
 
 #### 1.2 VueComponent.options
-而对于组件构造函数的`options`。
+而对于组件构造函数，它们的`options`是通过`Vue.extend`继承自Vue的，这一点在`3.1`小节分析`createComponent`的内部逻辑时提到过：
+```js
+Vue.extend = function (extendOptions) {
+  const Super = this
+
+  // 定义子类构造函数
+  const Sub = function VueComponent (options) {
+    this._init(options)
+  }
+
+  // 合并父类的静态属性 options 和 传入的 extendOptions，形成子类的静态属性 options
+  Sub.options = mergeOptions(
+    Super.options,
+    extendOptions
+  )
+  // 将子类的静态属性super指向父类
+  Sub['super'] = Super
+
+  // 在 Sub.prototype 上添加 props 和 computed 的便捷访问
+  if (Sub.options.props) initProps(Sub)
+  if (Sub.options.computed) initComputed(Sub)
+
+  // 将子类自身注册为局部组件
+  if (name) Sub.options.components[name] = Sub
+
+  // 保持在继承时对父类Super.options的引用，以便于在之后实例化时检查Super.options是否更新过
+  Sub.superOptions = Super.options
+  Sub.extendOptions = extendOptions
+  Sub.sealedOptions = extend({}, Sub.options)
+
+  // ...
+
+  return Sub
+}
+```
 
 ### 2. mergeOptions
 ```js
