--- a/Vue源码/3.1-组件化-创建组件vnode的render方法.md
+++ b/Vue源码/3.1-组件化-创建组件vnode的render方法.md
@@ -89,14 +89,14 @@ function createComponent (Ctor, data, context, children, tag) {
 - 安装组件钩子函数
 - 创建组件`vnode`
 
-### 1. 构造组件构造函数
+### 1. 创建组件的构造函数
 ```js
 const baseCtor = context.$options._base
 
 if (isObject(Ctor)) Ctor = baseCtor.extend(Ctor)
 ```
 
-对于上文提到初始化根实例`vm`的方式，`context.$options._base`指向构造函数`Vue`（$options的合并在3.3小节会讲到，这里先记住）。`Vue.extend(Ctor)`基于`Ctor`构造一个`Vue`的子类：
+对于上文提到初始化根实例`vm`的方式，`context.$options._base`指向构造函数`Vue`（$options的合并在3.3小节会讲到，这里先记住）。`Vue.extend(Ctor)`的作用是基于`Ctor`构造一个`Vue`的子类：
 ```js
 // src/core/global-api/extend.js
 Vue.extend = function (extendOptions) {
