--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -110,7 +110,7 @@ Vue.prototype._init = function (options) {
 }
 ```
 
-创建子组件实例时，子组件的`_inti`方法会得到调用，由于`options._isComponent`为`true`走到了`initInternalComponent`的流程中去：
+创建子组件实例时，子组件的`_inti`方法会得到调用，对于子组件实例`options._isComponent`为`true`，走到`initInternalComponent`的流程中去：
 ```js
 function initInternalComponent (vm, options) {
   const opts = vm.$options = Object.create(vm.constructor.options)
@@ -134,7 +134,7 @@ function initInternalComponent (vm, options) {
 - opts.parent = options._parent
 - opts._parentVnode = options._parentVnode
 
-将`createComponentInstanceForVnode`接收的几个参数合并到子组件实例的`$options`中去。
+将创建子组件实例时接收的几个参数合并到子组件实例的`$options`中去。
 
 
 再次回到组件的`init`钩子中，创建子组件实例`ch`后通过`ch.$mount`挂载子组件实例。子组件的`_render`：
