--- a/Vue源码/3.3-组件化-合并options.md
+++ b/Vue源码/3.3-组件化-合并options.md
@@ -1,11 +1,13 @@
 通过之前的源码分析，现在我们知道，创建的Vue实例有两种：一种是手动调用`Vue`构造函数创建的全局的`vm`，另一种是在做组件vnode的`patch`过程中创建的子组件实例。
 
-无论哪种场景，在创建Vue实例时都会走到`vm._init(options)`的逻辑中去，在`1.2-Vue的定义`中提到过这一点，`_init`中有一段合并`options`的逻辑：
+无论哪种方式创建Vue实例，都会走到`vm._init(options)`的逻辑中去，在`1.2-Vue的定义`中提到过这一点，`_init`中有一段合并`options`的逻辑：
 ```js
 Vue.prototype._init = function (options) {
   if (options && options._isComponent) {
+    // 组件实例
     initInternalComponent(vm, options)
   } else {
+    // 非组件实例
     vm.$options = mergeOptions(
       resolveConstructorOptions(vm.constructor),
       options || {},
