--- a/Vue源码/3.1-组件化-创建组件vnode的render方法.md
+++ b/Vue源码/3.1-组件化-创建组件vnode的render方法.md
@@ -96,7 +96,7 @@ const baseCtor = context.$options._base
 if (isObject(Ctor)) Ctor = baseCtor.extend(Ctor)
 ```
 
-对于上文提到初始化根实例`vm`的方式，`context.$options._base`指向构造函数`Vue`（$options的合并在3.3小节会讲到，这里先记住）。`Vue.extend(Ctor)`的作用是基于`Ctor`构造一个`Vue`的子类：
+对于上文提到初始化根实例`vm`的方式，`context.$options._base`指向构造函数`Vue`（`$options`的合并会在3.3小节讲到，这里先记住）。`Vue.extend(Ctor)`的作用是基于`Ctor`构造一个`Vue`的子类：
 ```js
 // src/core/global-api/extend.js
 Vue.extend = function (extendOptions) {
@@ -104,7 +104,7 @@ Vue.extend = function (extendOptions) {
   const Super = this
   const SuperId = Super.cid
 
-  // 缓存基于该父类创建的子类
+  // 缓存基于该父类创建的子类，每次创建组件的实例时不必重复构造对应的组件类
   const cachedCtors = extendOptions._Ctor || (extendOptions._Ctor = {})
   if (cachedCtors[SuperId]) return cachedCtors[SuperId]
     
