--- a/Vue源码/3.3-组件化-合并options.md
+++ b/Vue源码/3.3-组件化-合并options.md
@@ -1,6 +1,6 @@
-通过之前的源码分析，现在我们知道，创建的Vue实例有两种：一种是手动调用`Vue`构造函数创建的全局的`vm`，另一种是在做组件vnode的`patch`过程中创建的子组件实例。
+通过之前的源码分析，现在我们知道，创建的Vue实例有两种：一种是手动调用`Vue`构造函数创建的全局的实例，另一种是在做组件vnode的`patch`过程中创建的子组件实例。
 
-无论哪种方式创建Vue实例，都会走到`vm._init(options)`的逻辑中去，在`1.2-Vue的定义`中提到过这一点，`_init`中有一段合并`options`的逻辑：
+无论哪种方式创建Vue实例，都会调用实例的`_init(options)`方法，`_init`中首先有一段合并`options`的逻辑：
 ```js
 Vue.prototype._init = function (options) {
   if (options && options._isComponent) {
@@ -22,34 +22,11 @@ Vue.prototype._init = function (options) {
 }
 ```
 
-先说结论：`mergeOptions`将`resolveConstructorOptions(vm.constructor)`的返回值与`options`合并。
+根据实例的类型，`vm.options`的合并处理分为两种方式——`initInternalComponent`和`mergeOptions`。其中`initInternalComponent`在`3.2`小节已经分析过，本节仅分析`mergeOptions`。
 
-### 1. resolveConstructorOptions
-从名字上就可以看出`resolveConstructorOptions`的作用，解析并返回构造函数的`options`属性：
-```js
-function resolveConstructorOptions (Ctor) {
-  var options = Ctor.options
-  if (Ctor.super) {
-    var superOptions = resolveConstructorOptions(Ctor.super)
-    var cachedSuperOptions = Ctor.superOptions
-    if (superOptions !== cachedSuperOptions) {
-      Ctor.superOptions = superOptions
-      var modifiedOptions = resolveModifiedOptions(Ctor)
-      if (modifiedOptions) extend(Ctor.extendOptions, modifiedOptions)
+在分析`mergeOptions`合并实例的`$options`的实现之前，我们先看一看实例的构造函数上的静态属性`options`。
 
-      options = Ctor.options = mergeOptions(superOptions, Ctor.extendOptions)
-      if (options.name) options.components[options.name] = Ctor
-    }
-  }
-  return options
-}
-```
-
-对于构造函数Vue创建的`vm`，`vm.constructor`当然是`Vue`，而因为`Vue.super`为空，所以`resolveConstructorOptions`直接返回`Vue.options`。而对于组件级的`vm`，其`options`的解析还需要额外的处理逻辑。
-
-我们先来看构造函数Vue的`options`属性。
-
-#### 1.1 Vue.options
+### 1. Vue.options / VueComponent.options
 涉及`Vue.options`的写操作分散在两处：
 ```js
 // src/core/global-api/index.js
@@ -78,44 +55,32 @@ extend(Vue.options.components, platformComponents)
 `initGlobalAPI(Vue)`初始化构造函数Vue的全局静态属性方法，以及安装平台runtime的`directives`和`components`时均涉及`Vue.options`的写入，最后它长这样：
 ![Vue.options](https://pic.downk.cc/item/5f588c47160a154a67f06d84.jpg)
 
-#### 1.2 VueComponent.options
-而对于组件构造函数，它们的`options`是通过`Vue.extend`继承自Vue的，这一点在`3.1`小节分析`createComponent`的内部逻辑时提到过：
+而对于组件实例来说，在`3.1`小节已经提到，组件的构造函数是在创建组件实例之前通过`Ctor.extend(options)`构造的，相应的，组件构造函数的`options`也会继承父类的`options`。
+
+### 2. resolveConstructorOptions
+`mergeOptions`：
 ```js
-Vue.extend = function (extendOptions) {
-  const Super = this
+function resolveConstructorOptions (Ctor) {
+  var options = Ctor.options
+  if (Ctor.super) {
+    var superOptions = resolveConstructorOptions(Ctor.super)
+    var cachedSuperOptions = Ctor.superOptions
+    if (superOptions !== cachedSuperOptions) {
+      Ctor.superOptions = superOptions
+      var modifiedOptions = resolveModifiedOptions(Ctor)
+      if (modifiedOptions) extend(Ctor.extendOptions, modifiedOptions)
 
-  // 定义子类构造函数
-  const Sub = function VueComponent (options) {
-    this._init(options)
+      options = Ctor.options = mergeOptions(superOptions, Ctor.extendOptions)
+      if (options.name) options.components[options.name] = Ctor
+    }
   }
-
-  // 合并父类的静态属性 options 和 传入的 extendOptions，形成子类的静态属性 options
-  Sub.options = mergeOptions(
-    Super.options,
-    extendOptions
-  )
-  // 将子类的静态属性super指向父类
-  Sub['super'] = Super
-
-  // 在 Sub.prototype 上添加 props 和 computed 的便捷访问
-  if (Sub.options.props) initProps(Sub)
-  if (Sub.options.computed) initComputed(Sub)
-
-  // 将子类自身注册为局部组件
-  if (name) Sub.options.components[name] = Sub
-
-  // 保持在继承时对父类Super.options的引用，以便于在之后实例化时检查Super.options是否更新过
-  Sub.superOptions = Super.options
-  Sub.extendOptions = extendOptions
-  Sub.sealedOptions = extend({}, Sub.options)
-
-  // ...
-
-  return Sub
+  return options
 }
 ```
 
-### 2. mergeOptions
+从名字上就可以看出，`resolveConstructorOptions`用来解析并返回构造函数的静态属性`options`。对于构造函数Vue，因为`Vue.super`为空，所以直接返回`Vue.options`。而对于组件构造函数，其`options`的解析还需要额外的处理。
+
+### 3. mergeOptions
 ```js
 // src/core/util/options.js
 function mergeOptions (parent, child, vm) {
