--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -136,7 +136,6 @@ function initInternalComponent (vm, options) {
 
 将创建子组件实例时接收的几个参数合并到子组件实例的`$options`中去。
 
-
 再次回到组件的`init`钩子中，创建子组件实例`ch`后通过`ch.$mount`挂载子组件实例。子组件的`_render`：
 ```js
 Vue.prototype._render = function () {
@@ -282,7 +281,7 @@ if (isDef(vnode.componentInstance)) {
 }
 ```
 
-通过`insert`完成组件的DOM的插入。
+通过`insert`完成组件对应的DOM的插入。
 
 ### 总结
 至此，一个组件vnode是如何创建、初始化、渲染的过程也就分析完了。在对组件化的实现有一个大概掌握后，接下来我们要来探究一下这其中的一些细节。
