--- a/Vue源码/3.3-组件化-合并options.md
+++ b/Vue源码/3.3-组件化-合并options.md
@@ -22,12 +22,12 @@ Vue.prototype._init = function (options) {
 }
 ```
 
-根据实例的类型，`vm.options`的合并处理分为两种方式——`initInternalComponent`和`mergeOptions`。其中`initInternalComponent`在`3.2`小节已经分析过，本节仅分析`mergeOptions`。
+根据实例的类型，分别通过`initInternalComponent`和`mergeOptions`将构造函数上的静态属性`options`与创建实例提供的参数合并到实例的`$options`上。其中`initInternalComponent`在`3.2`小节已经分析过，本节仅分析`mergeOptions`。
 
-在分析`mergeOptions`合并实例的`$options`的实现之前，我们先看一看实例的构造函数上的静态属性`options`。
+在分析`mergeOptions`的具体实现之前，我们先看一看实例的构造函数上的静态属性`options`。
 
 ### 1. Vue.options / VueComponent.options
-涉及`Vue.options`的写操作分散在两处：
+涉及`Vue.options`的写操作主要分散在两处。一个地方是在`initGlobalAPI(Vue)`中，它的主要作用是初始化Vue的静态属性，其中包含了`Vue.options`：
 ```js
 // src/core/global-api/index.js
 function initGlobalAPI (Vue) {
@@ -45,20 +45,23 @@ function initGlobalAPI (Vue) {
   extend(Vue.options.components, builtInComponents)
   // ... 其他全局方法
 }
+```
 
+另一个地方是安装平台的runtime的`directives`和`components`时：
+```js
 // src/platforms/web/runtime/index.js
 // 将platformDirectives、platformComponents对象上的属性拷贝到Vue.options.directives、Vue.options.components上
 extend(Vue.options.directives, platformDirectives)
 extend(Vue.options.components, platformComponents)
 ```
 
-`initGlobalAPI(Vue)`初始化构造函数Vue的全局静态属性方法，以及安装平台runtime的`directives`和`components`时均涉及`Vue.options`的写入，最后它长这样：
+最终，`Vue.options`长这个样子：
 ![Vue.options](https://pic.downk.cc/item/5f588c47160a154a67f06d84.jpg)
 
 而对于组件实例来说，在`3.1`小节已经提到，组件的构造函数是在创建组件实例之前通过`Ctor.extend(options)`构造的，相应的，组件构造函数的`options`也会继承父类的`options`。
 
 ### 2. resolveConstructorOptions
-`mergeOptions`：
+`resolveConstructorOptions`方法用来解析出构造函数的静态属性`options`：
 ```js
 function resolveConstructorOptions (Ctor) {
   var options = Ctor.options
@@ -78,9 +81,10 @@ function resolveConstructorOptions (Ctor) {
 }
 ```
 
-从名字上就可以看出，`resolveConstructorOptions`用来解析并返回构造函数的静态属性`options`。对于构造函数Vue，因为`Vue.super`为空，所以直接返回`Vue.options`。而对于组件构造函数，其`options`的解析还需要额外的处理。
+对于构造函数Vue，因为`Vue.super`为空，所以直接返回`Vue.options`。而对于组件构造函数，其`options`的解析还需要额外的处理。
 
 ### 3. mergeOptions
+回到`mergeOptions`：
 ```js
 // src/core/util/options.js
 function mergeOptions (parent, child, vm) {
@@ -91,13 +95,13 @@ function mergeOptions (parent, child, vm) {
   normalizeInject(child, vm)
   normalizeDirectives(child)
 
-  // 只对未合并的options做处理，已合并的options._base不为空
-  if (!child._base) {
-    if (child.extends) parent = mergeOptions(parent, child.extends, vm)
-    if (child.mixins) {
-      for (var i = 0, l = child.mixins.length; i < l; i++) {
-        parent = mergeOptions(parent, child.mixins[i], vm)
-      }
+  const extendsFrom = child.extends
+  if (extendsFrom) {
+    parent = mergeOptions(parent, extendsFrom, vm)
+  }
+  if (child.mixins) {
+    for (let i = 0, l = child.mixins.length; i < l; i++) {
+      parent = mergeOptions(parent, child.mixins[i], vm)
     }
   }
 
@@ -116,5 +120,69 @@ function mergeOptions (parent, child, vm) {
 ```
 
 `mergeOptions`的主要作用是将`parent`、`child`合并成一个新的`options`并返回：
-- 当`child`是未合并的`options`时，递归调用`mergeOptions`将`child.extends`、`child.mixins`合并到`parent`上
-- 遍历`parent`、`child`，通过`mergeField`将`parent`、`child`对象上的属性挂到`options`上。
+- 先递归调用`mergeOptions`将`child.extends`、`child.mixins`合并到`parent`上
+- 遍历`parent`、`child`的属性名，通过`mergeField`将对应的`strats`中的记录的合并策略挂到`options`上。
+
+其中，`strats`的定义：
+```js
+const strats = Object.create(null)
+const ASSET_TYPES = [
+  'component',
+  'directive',
+  'filter'
+]
+// 这里定义了Vue所有的钩子函数
+const LIFECYCLE_HOOKS = [
+  'beforeCreate',
+  'created',
+  'beforeMount',
+  'mounted',
+  'beforeUpdate',
+  'updated',
+  'beforeDestroy',
+  'destroyed',
+  'activated',
+  'deactivated',
+  'errorCaptured',
+  'serverPrefetch'
+]
+
+ASSET_TYPES.forEach(function (type) {
+  strats[type + 's'] = mergeAssets
+})
+
+function mergeAssets (parentVal, childVal, vm, key) {
+  const res = Object.create(parentVal || null)
+  if (childVal) {
+    process.env.NODE_ENV !== 'production' && assertObjectType(key, childVal, vm)
+    return extend(res, childVal)
+  } else {
+    return res
+  }
+}
+
+// 对于钩子函数，他们的合并策略都是mergeHook函数
+LIFECYCLE_HOOKS.forEach(hook => {
+  strats[hook] = mergeHook
+})
+
+function mergeHook (parentVal, childVal) {
+  const res = childVal
+    ? parentVal
+      ? parentVal.concat(childVal)
+      : Array.isArray(childVal)
+        ? childVal
+        : [childVal]
+    : parentVal
+  return res
+    ? dedupeHooks(res)
+    : res
+}
+```
+
+对于生命周期钩子，
+
+合并完之后，`vm.$options`差不多长这样：
+
+### 总结
+
