docs: Vue组件生命周期

--- a/Vue源码/3.3-组件化-合并options.md
+++ b/Vue源码/3.3-组件化-合并options.md
@@ -121,17 +121,11 @@ function mergeOptions (parent, child, vm) {
 
 `mergeOptions`的主要作用是将`parent`、`child`合并成一个新的`options`并返回：
 - 先递归调用`mergeOptions`将`child.extends`、`child.mixins`合并到`parent`上
-- 遍历`parent`、`child`的属性名，通过`mergeField`将对应的`strats`中的记录的合并策略挂到`options`上。
+- 遍历`parent`、`child`的属性名`key`，通过`strats`寻找对应的合并策略`strats[key]`。
 
-其中，`strats`的定义：
+`strats`中记录了各种`key`对应的合并策略，如对于生命周期钩子，它们的合并策略是mergeHook：
 ```js
 const strats = Object.create(null)
-const ASSET_TYPES = [
-  'component',
-  'directive',
-  'filter'
-]
-// 这里定义了Vue所有的钩子函数
 const LIFECYCLE_HOOKS = [
   'beforeCreate',
   'created',
@@ -147,21 +141,6 @@ const LIFECYCLE_HOOKS = [
   'serverPrefetch'
 ]
 
-ASSET_TYPES.forEach(function (type) {
-  strats[type + 's'] = mergeAssets
-})
-
-function mergeAssets (parentVal, childVal, vm, key) {
-  const res = Object.create(parentVal || null)
-  if (childVal) {
-    process.env.NODE_ENV !== 'production' && assertObjectType(key, childVal, vm)
-    return extend(res, childVal)
-  } else {
-    return res
-  }
-}
-
-// 对于钩子函数，他们的合并策略都是mergeHook函数
 LIFECYCLE_HOOKS.forEach(hook => {
   strats[hook] = mergeHook
 })
@@ -179,8 +158,6 @@ function mergeHook (parentVal, childVal) {
     : res
 }
 ```
-
-对于生命周期钩子，
 
 合并完之后，`vm.$options`差不多长这样：
 
