docs: Vue 实例options的合并

--- a/Vue源码/3.3-组件化-合并options.md
+++ b/Vue源码/3.3-组件化-合并options.md
@@ -81,7 +81,7 @@ function resolveConstructorOptions (Ctor) {
 }
 ```
 
-对于构造函数Vue，因为`Vue.super`为空，所以直接返回`Vue.options`。而对于组件构造函数，其`options`的解析还需要额外的处理。
+对于构造函数Vue，因为`Vue.super`为空，所以直接返回`Vue.options`。而对于组件构造函数，其`options`的解析还需要根据其父类的options做额外的处理。
 
 ### 3. mergeOptions
 回到`mergeOptions`：
@@ -121,9 +121,9 @@ function mergeOptions (parent, child, vm) {
 
 `mergeOptions`的主要作用是将`parent`、`child`合并成一个新的`options`并返回：
 - 先递归调用`mergeOptions`将`child.extends`、`child.mixins`合并到`parent`上
-- 遍历`parent`、`child`的属性名`key`，通过`strats`寻找对应的合并策略`strats[key]`。
+- 遍历`parent`、`child`的属性名`key`，通过调用`strats`中记录的对应的合并策略`strats[key]`。
 
-`strats`中记录了各种`key`对应的合并策略，如对于生命周期钩子，它们的合并策略是mergeHook：
+`strats`记录了各种`key`对应的合并策略，比如对于生命周期钩子`created`、`mounted`...，它们的合并策略是`mergeHook`：
 ```js
 const strats = Object.create(null)
 const LIFECYCLE_HOOKS = [
@@ -145,6 +145,7 @@ LIFECYCLE_HOOKS.forEach(hook => {
   strats[hook] = mergeHook
 })
 
+// 将父options上的钩子和子options上的钩子进行合并
 function mergeHook (parentVal, childVal) {
   const res = childVal
     ? parentVal
@@ -159,7 +160,13 @@ function mergeHook (parentVal, childVal) {
 }
 ```
 
-合并完之后，`vm.$options`差不多长这样：
+在经过一些列的options合并完之后，`vm.$options`差不多长这样：
 
 ### 总结
+这一小节分析了`Vue`初始化阶段的`options`的合并过程，合并方式有两种：
+- 子组件初始化过程通过`initInternalComponent`
+- 手动调用构造函数`Vue`是通过`mergeOptions`
 
+前者比后者更快。
+
+合并`optoins`的作用是将构造函数上的静态`options`与创建实例提供的`options`合并到所创建的实例的`$options`中。
