docs: 生命周期 finished

--- a/Vue源码/3.4-组件化-生命周期.md
+++ b/Vue源码/3.4-组件化-生命周期.md
@@ -99,7 +99,7 @@ function invokeInsertHook (vnode, queue, initial) {
 }
 ```
 
-这里会将`insertedVnodeQueue`中保存的钩子函数依次执行，组件vnode的`insert`钩子函数是在创建组件vnode时通过`installComponentHooks`时安装在`vnode.data.hook`上的：
+这里会将`insertedVnodeQueue`中保存的钩子函数依次执行，而组件vnode的`insert`钩子函数是在创建组件vnode时通过`installComponentHooks`时安装在`vnode.data.hook`上的：
 ```js
 const componentVNodeHooks = {
   insert (vnode) {
@@ -115,7 +115,105 @@ const componentVNodeHooks = {
 可以看到子组件是在`insert`钩子函数执行时触发实例的`mounted`钩子的。`insertedVnodeQueue`的添加顺序是先子后父，所以对于同步渲染的子组件，`mounted`钩子函数的执行顺序也是先子后父。
 
 ### 3. beforeUpdate和Updated
+在实例挂载阶段，会实例化一个渲染的`Watcher`去监听实例上数据的变化来重新触发渲染：
+```js
+function mountComponent (vm, el, hydrating) {
+  // ... beforeMount
+
+  let updateComponent = () => {
+    vm._update(vm._render(), hydrating)
+  }
+
+  new Watcher(vm, updateComponent, noop, {
+    before () {
+      if (vm._isMounted && !vm._isDestroyed) {
+        callHook(vm, 'beforeUpdate')
+      }
+    }
+  }, true)
+
+  // ...mounted
+}
+```
+
+可以看到`Watcher`的`before`方法执行时，如果实例已经`mounted`时会触发实例的`beforeUpdate`钩子。
+
+而`Watcher`的`before`的执行时机是在`flushSchedulerQueue`阶段：
+```js
+function flushSchedulerQueue () {
+  for (index = 0; index < queue.length; index++) {
+    watcher = queue[index]
+    if (watcher.before) {
+      watcher.before()
+    }
+    id = watcher.id
+    has[id] = null
+    watcher.run()
+  }
+
+  const activatedQueue = activatedChildren.slice()
+  const updatedQueue = queue.slice()
+
+  callActivatedHooks(activatedQueue)
+  callUpdatedHooks(updatedQueue)
+}
+
+function callUpdatedHooks (queue) {
+  let i = queue.length
+  while (i--) {
+    const watcher = queue[i]
+    const vm = watcher.vm
+    if (vm._watcher === watcher && vm._isMounted && !vm._isDestroyed) {
+      callHook(vm, 'updated')
+    }
+  }
+}
+```
+
+`updatedQueue`是更新过的`watcher`数组，`callUpdatedHooks`遍历该数组的`watcher`，当前`watcher`是`vm._watcher`且实例已经`mounted`时才会触发实例的`updated`钩子。
+
+`flushSchedulerQueue`函数的执行以及`Watcher`的内部实现会在响应式原理部分深入分析。
 
 ### 4. beforeDestroy和destroyed
+```js
+Vue.prototype.$destroy = function () {
+  const vm: Component = this
+  if (vm._isBeingDestroyed) {
+    return
+  }
+
+  callHook(vm, 'beforeDestroy')
+  vm._isBeingDestroyed = true
+  const parent = vm.$parent
+  if (parent && !parent._isBeingDestroyed && !vm.$options.abstract) {
+    remove(parent.$children, vm)
+  }
+  if (vm._watcher) {
+    vm._watcher.teardown()
+  }
+  let i = vm._watchers.length
+  while (i--) {
+    vm._watchers[i].teardown()
+  }
+  if (vm._data.__ob__) {
+    vm._data.__ob__.vmCount--
+  }
+  vm._isDestroyed = true
+  vm.__patch__(vm._vnode, null)
+  callHook(vm, 'destroyed')
+  vm.$off()
+  if (vm.$el) {
+    vm.$el.__vue__ = null
+  }
+  if (vm.$vnode) {
+    vm.$vnode.parent = null
+  }
+}
+```
+
+`vm.$destroy`刚开始时触发了`beforeDestroy`钩子，接着执行了一系列的销毁动作，包括从`parent`的`$children`中删掉自身，删除`Watcher`，当前渲染的`vnode`执行销毁钩子函数等，执行完毕后再触发实例的`destroy`钩子。
+
+在`$destroy`的执行过程中，它又会执行`vm.__patch__(vm._vnode, null)`触发它子组件的销毁钩子，所以实例的`destroy`钩子的执行顺序是先子后父，这一点与`mounted`过程一样。
 
 ### 总结
+这里简单分析一个Vue实例生命周期中各个钩子的执行时机以及顺序，了解它们有利于我们在合适的生命周期去做不同的事情。
