--- a/Vue源码/4.1-响应式-对象.md
+++ b/Vue源码/4.1-响应式-对象.md
@@ -1,99 +1,55 @@
-前面我们分析的如何将数据映射到DOM中主要发生在初始化阶段，在分析`$mount`调用的`mountComponent`方法时也提到过这一点：
-```js
-const updateComponent = () => {
-  vm._update(vm._render(), hydrating)
-}
-
-// 实例化一个渲染watcher，回调函数的执行时机：
-// 1. 初始化  2.vm实例中的监测的数据发生变化
-new Watcher(vm, updateComponent, noop, {
-  before () {
-    if (vm._isMounted && !vm._isDestroyed) callHook(vm, 'beforeUpdate')
-  }
-}, true)
-```
-
-下面我们继续来分析数据变化时触发页面重新渲染的原理，这也是Vue数据驱动特性的一个体现。
+前面我们主要分析了实例初始化阶段如何将数据映射到DOM，现在我们来探究当数据发生变化时如何通知更新到页面重新渲染的，这也是Vue的响应式特性的表现。
 
 ### 1. Object.defineProperty
-Vue.js实现响应式的核心正是利用了ES 5的`Object.defineProperty`：
+Vue.js实现响应式的核心利用了ES 5的`Object.defineProperty`，这个方法可以在对象上定义或修改属性：
 ```js
 Object.defineProperty(obj, property, descriptor)
 ```
 
-如果`obj`本身：
-- 不存在`property`属性，则在`obj`上定义`property`属性
-- 存在`property`属性，则修改这个`property`属性
+这里比较重要的概念是`descriptor`，这是一个**属性描述符**。`descriptor`描述符有两类——数据描述符和存取描述符，具体参考[MDN文档](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/defineProperty)。
 
-`descriptor`是**属性描述符**，可设置的描述符有两类——数据描述符和存取描述符，具体参考[MDN文档](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/defineProperty)。
-
-这里我们需要关注的是存取描述符：`get`和`set`：
-- `get`指的是为属性提供名的`getter`函数，当访问数据的属性时会触发属性的`getter`方法
-- `set`指的是为属性提供名的`setter`函数，当对数据的属性进行写操作时会触发属性的`setter`方法
+对于`Vue`的响应式实现，我们需要关注的是存取描述符：`get`和`set`：
+- `get`指的是属性的`getter`函数，当访问数据的属性时会读属性的`getter`方法的返回值
+- `set`指的是属性的`setter`函数，当对数据的属性进行写操作时会触发属性的`setter`方法
 
 当一个对象的属性拥有了`getter`和`setter`，我们可以称这个对象为响应式对象。
 
 ### 2. initState
-之前我们已经谈过，在Vue实例的初始化阶段，`_init(options)`方法执行时：
+在Vue实例的初始化阶段，`_init(options)`方法执行时，有一个`initState(vm)`的操作：
 ```js
-Vue.prototype._init = function (options?: Object) {
+Vue.prototype._init = function (options) {
   const vm = this
-  // 每个Vue实例都会有一个递增唯一的id标识
-  vm._uid = uid++
-
-  // 所有Vue的实例都被标记_isVue = true，它的作用是避免实例被响应系统observe?
-  vm._isVue = true
-
-  // 对用于初始化实例的options做了一层处理
-  if (options && options._isComponent) {
-    // _isComponent 是一个内部选项，在创建组件实例的时候才会生成，值为true
-    // 因为动态选项合并非常慢，而且没有一个内部组件选项，需要特殊处理?
-    initInternalComponent(vm, options)
-  } else {
-    // 根实例的$options处理
-    vm.$options = mergeOptions(
-      resolveConstructorOptions(vm.constructor),
-      options || {},
-      vm
-    )
-  }
-
-  if (process.env.NODE_ENV !== 'production') {
-    // 在非生产环境下设置渲染函数的作用域代理，其目的是在开发阶段提供良好的提示信息（如在模板内访问实例上不存在的属性，则会给出准确的报错信息）
-    initProxy(vm)
-  } else {
-    // 生产环境中，vm._renderProxy 是实例本身
-    vm._renderProxy = vm
-  }
+  // options处理
 
   vm._self = vm
 
-  // 实例的生命周期相关变量初始化
   initLifecycle(vm)
+  // ...
 
-  // 实例的事件监听初始化
-  initEvents(vm)
-
-  // vm.$createElement、vm._c
-  initRender(vm)
-
-  // 实例的beforeCreate生命钩子的回调
   callHook(vm, 'beforeCreate')
-
-  // 实例在data/props初始化之前要进行绑定?
-  initInjections(vm) // resolve injections before data/props
-
-  // 实例state状态初始化
+  
   initState(vm)
-
-  // 实例在data/props之后要进行提供?
-  initProvide(vm) // resolve provide after data/props
-
-  // 实例的created生命钩子的回调
+  
   callHook(vm, 'created')
-
-  // 根据挂载点，调用挂载函数
+  
+  // ...
   vm.$mount(vm.$options.el)
+}
+
+function initState (vm) {
+  vm._watchers = []
+  const opts = vm.$options
+  if (opts.props) initProps(vm, opts.props)
+  if (opts.methods) initMethods(vm, opts.methods)
+  if (opts.data) {
+    initData(vm)
+  } else {
+    observe(vm._data = {}, true)
+  }
+  if (opts.computed) initComputed(vm, opts.computed)
+  if (opts.watch && opts.watch !== nativeWatch) {
+    initWatch(vm, opts.watch)
+  }
 }
 ```
 
