--- a/Vue源码/3.3-组件化-合并options.md
+++ b/Vue源码/3.3-组件化-合并options.md
@@ -22,9 +22,11 @@ Vue.prototype._init = function (options) {
 }
 ```
 
-根据实例的类型，`vm.options`的合并处理分为两种方式——`initInternalComponent`和`mergeOptions`。其中`initInternalComponent`在`3.2`小节已经分析过，本节仅分析`mergeOptions`。
+这里是将创建实例时提供的参数与实例的构造函数上的静态属性`options`做合并处理，写到实例的`$options`上去。
 
-在分析`mergeOptions`合并实例的`$options`的实现之前，我们先看一看实例的构造函数上的静态属性`options`。
+而根据实例的类型，`vm.$options`的合并处理又分为两种方式——`initInternalComponent`和`mergeOptions`。其中`initInternalComponent`在`3.2`小节已经分析过，本节仅分析`mergeOptions`的流程。
+
+在分析`mergeOptions`合并实例的`$options`的实现之前，我们先看一看实例的构造函数上的静态属性`options`长什么样。
 
 ### 1. Vue.options / VueComponent.options
 涉及`Vue.options`的写操作分散在两处：
@@ -55,7 +57,7 @@ extend(Vue.options.components, platformComponents)
 `initGlobalAPI(Vue)`初始化构造函数Vue的全局静态属性方法，以及安装平台runtime的`directives`和`components`时均涉及`Vue.options`的写入，最后它长这样：
 ![Vue.options](https://pic.downk.cc/item/5f588c47160a154a67f06d84.jpg)
 
-而对于组件实例来说，在`3.1`小节已经提到，组件的构造函数是在创建组件实例之前通过`Ctor.extend(options)`构造的，相应的，组件构造函数的`options`也会继承父类的`options`。
+在`3.1`小节已经讲过，组件的构造函数是在创建组件实例之前通过`Ctor.extend(options)`构造的，相应的，组件构造函数的静态属性`options`也会继承父类的`options`。
 
 ### 2. resolveConstructorOptions
 `mergeOptions`：
